small correction in service descriptions

--- a/snaptogif/services.yaml
+++ b/snaptogif/services.yaml
@@ -1,11 +1,11 @@
 start:
-  description: Start create GIF from snapshots
+  description: Start create GIF/MP4 from snapshots
   fields:
     sourcepath:
       description: path of the directory where the snaphots are in
       example: '/config/snapshots'
     destinationpath: 
-      description: path of the directory where the GIF should be created
+      description: path of the directory where the GIF/MP4 should be created
       example: '/config/www'    
     filename:
       description: Name for gif/mp4 file (OPTIONAL, default='latest')
@@ -17,42 +17,42 @@ start:
         description: list of files (jpg) to exclude in the output
         example: 'latest_snaphot.jpg'
     begintimestamp:
-      description: Start time for snapshot to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
+      description: Start time for files to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
       example: '26/12/2021 12:00:00'
     endtimestamp:
-      description: End time for snapshot to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
+      description: End time for filest to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
       example: '26/12/2021 13:00:00'
 delete:
-  description: Delete snapshots (jpg, gif or mp4)  
+  description: Delete files (jpg, gif or mp4)  
   fields:
     sourcepath:
-      description: path of the directory where to delete the snapshots (jpg)
+      description: path of the directory where to delete the files
       example: '/config/snapshots'
     excludelist:
         description: list of files (jpg, gif or mp4) to exclude in the deletion
         example: 'latest_snaphot.jpg'  
     begintimestamp:
-      description: Start time for snapshot to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
+      description: Start time for files to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
       example: '26/12/2021 12:00:00'
     endtimestamp:
-      description: End time for snapshot to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
+      description: End time for files to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
       example: '26/12/2021 13:00:00'
 move:
-  description: move snapshots (jpg, gif or mp4)
+  description: Move files (jpg, gif or mp4)
   fields:
     sourcepath:
-      description: path of the directory where the snaphots are in
+      description: path of the directory where the files are in
       example: '/config/snapshots'
     destinationpath: 
-      description: path of the directory where tp move the snapshots
+      description: path of the directory where to move the files
       example: '/config/archive'       
     excludelist:
         description: list of files (jpg, gif or mp4) to exclude in the move
         example: 'latest_snaphot.jpg'
     begintimestamp:
-      description: Start time for snapshot to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
+      description: Start time for files to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
       example: '26/12/2021 12:00:00'
     endtimestamp:
-      description: End time for snapshot to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
+      description: End time for files to include (OPTIONAL, format mm/dd/yy hh:mm:ss)
       example: '26/12/2021 13:00:00'
     
